# TradeExecGym

./: .dockerignore  .gitattributes  .gitignore  .hf_rebuild_trigger  422_debug.json  422_final_check.json  AGENTS.md  CONTEXT_GYM_PRD.md  DOCKERFILE_AUDIT.md  Dockerfile  JUDGES_CHEAT_SHEET.md  LLM_JUDGE_STRATEGY.md  MASTER_ACTION_PLAN.md  PITCH.md  QUICK_START_GUIDE.md  README.md  ROBUSTNESS_REPORT.json  ROBUSTNESS_VALIDATION_GUIDE.txt  VALIDATION_GUIDE.md  XFACTOR_UPGRADES.md  another_inference.py  client.py  debug_422.py  debug_7865.py  debug_final.py  err.json  git_push_commands.sh  graders.py  implementation_plan.md  inference.py  inspect_schema.py  local-validate.sh  models.py  openapi.json  openenv.yaml  pid.txt  pyproject.toml  schema.json  schema_obs.json  start.sh  (+9 more)
baselines/: __init__.py  ac_optimal.py  heuristic_agent.py  run_baselines.py  twap.py  vwap.py
env/: __init__.py  gym_wrapper.py  market_regime.py  order_book.py  price_model.py  reward.py  venue_router.py
server/: __init__.py  app.py  tasks.py  trade_environment.py
tasks/: __init__.py  base_task.py  factory.py  graders.py  task1_twap.py  task2_vwap.py  task3_volatile.py  task4_adversary.py  task5_deadline.py  task_generators.py
tests/: phase1_validation.py  test_adversary_advanced.py  test_edge_cases.py  test_openenv_validate.py  test_order_book.py  test_physics.py  test_reward.py  test_submission_runtime.py  test_tasks.py  test_venue_router.py  validate_robustness.py
training/: dry_run.py  eval_all_tasks.py  eval_baselines.py  evaluate_agent.py  generate_grpo_dataset.py  reward_functions.py  (+5 more)
(+4 files in other folders)
